<?xml version="1.0"?>
<package>
  <name>kalman_sense</name>
  <version>0.0.0</version>
  <description>Unscented Kalman filtering for Visual-Inertial Navigation.</description>

  <maintainer email="josheddy@vt.edu">Joshua Eddy</maintainer>
  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/kalman_sense</url> -->

  <author email="josheddy@vt.edu">Joshua Eddy</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

  <export> </export>
</package>
